<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="ICC Ranking">
        <menu>
            <group>
                <item
                    android:id="@+id/icc_women"
                    android:icon="@drawable/person_female_25"
                    android:title="@string/icc_women_s_ranking" />
                <item
                    android:id="@+id/icc_men"
                    android:icon="@drawable/person_25"
                    android:title="@string/icc_men_s_ranking" />

            </group>
        </menu>
    </item>
    <item android:title="Setting">
        <menu>
            <group>
                <item
                    android:id="@+id/app_language"
                    android:icon="@drawable/translation_25"
                    android:title="@string/app_language" />
                <item
                    android:id="@+id/noti_setting"
                    android:icon="@drawable/alarm_25"
                    android:title="@string/notifications_settings" />

            </group>
        </menu>
    </item>
    <item android:title="Visit">
        <menu>
            <group>

                <item
                    android:id="@+id/facebook"
                    android:icon="@drawable/facebook_25"
                    android:title="@string/facebook" />
                <item
                    android:id="@+id/twitter"
                    android:icon="@drawable/twitter_25"
                    android:title="@string/twitter" />
                <item
                    android:id="@+id/instagram"
                    android:icon="@drawable/instagram_25"
                    android:title="@string/instagram" />

            </group>
        </menu>
    </item>

    <item android:title="Support">
        <menu>
            <group>
                <item
                    android:id="@+id/rate_us"
                    android:icon="@drawable/star_filled_25"
                    android:title="@string/rate_us" />
                <item
                    android:id="@+id/check_update"
                    android:icon="@drawable/downloading_updates_25"
                    android:title="@string/check_for_update" />
                <item
                    android:id="@+id/report_problem"
                    android:icon="@drawable/box_important_25"
                    android:title="@string/report_a_problem" />
                <item
                    android:id="@+id/invite_friend"
                    android:icon="@drawable/share_25"
                    android:title="@string/share_app" />
            </group>
        </menu>
    </item>
    <item android:title="About">
        <menu>
            <group>
                <item
                    android:id="@+id/about_us"
                    android:title="@string/about_us" />
                <item
                    android:id="@+id/tnc"
                    android:title="@string/terms_and_conditions" />
                <item
                    android:id="@+id/privay_police"
                    android:title="@string/privacy_police" />
                <item
                    android:id="@+id/contact_branding"
                    android:title="@string/contact_us_for_branding" />
            </group>
        </menu>
    </item>
</menu>
