<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_overlay"
    tools:context=".Activity.MainActivity">
        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:elevation="5dp"
            android:gravity="bottom">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/customAdview"
                android:layout_gravity="bottom"
                android:background="#131313"
                android:elevation="@dimen/cardview_default_radius"
                android:translationZ="3dp"
                app:tabIndicatorColor="@color/purple_200"
                app:tabIndicatorFullWidth="false"
                app:tabIndicatorHeight="3dp"
                app:tabMode="auto"
                app:tabTextAppearance="@style/TextAppearance.AppCompat.Small"
                app:tabTextColor="@android:color/white">

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tab0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/newsicon"
                    android:text="@string/News" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tab1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/trophyicon"
                    android:text="@string/Series" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tab2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/homebtn"
                    android:text="@string/Home" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tab3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/calendericon"
                    android:text="Schedule" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tab4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/moreicon"
                    android:text="@string/More" />

            </com.google.android.material.tabs.TabLayout>

            <ImageView
                android:id="@+id/customAdview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/adView"
                android:contentDescription="TODO"
                android:elevation="6sp"
                android:src="@drawable/banner"
                android:visibility="gone" />

            <RelativeLayout
                android:id="@+id/adView"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

            </RelativeLayout>


        </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>